- Version 1.2.1 Uploaded  -- Better Sanitization.  -- Better Description

--- a/style.css
+++ b/style.css
@@ -3,11 +3,8 @@ Theme Name: Imaginy
 Theme URI: http://webapptester.com/imaginy-theme
 Author: Archimidis Mertzanos
 Author URI: http://mertzanos.gr
-Description: Imaginy is one of the best free personal blogging theme. 
-It is a great theme for blogs,personal blogs,  simple magazines, smart personal portfolios, 
-and so much more.It is fully responsive because it is built on Twitter Bootstrap famous 
-framework and it is very simple to use.Every Option it is built on the customizer. It contains logo and favicon upload, one more sidebar, 4 widgetized areas in the footer , two sidebars, 4 widget areas in the footer and over 12 social network options. It is also fully translatable. Stand out of the crowd with this great theme.
-Version: 1.2
+Description: Imaginy is one of the best free personal blogging theme.It is a great WordPress theme for blogs,personal blogs,  simple magazines, smart personal portfolios, and so much more.It is fully responsive because it is built on Twitter Bootstrap famous framework and it is very simple to use.Every Option it is built on the customizer. It contains logo and favicon upload, one more sidebar, 4 widgetized areas in the footer , two sidebars, 4 widget areas in the footer and over 12 social network options. It is also fully translatable.Stand out of the crowd with this great theme.
+Version: 1.2.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: black, orange, white, two-columns, responsive-layout,custom-header, custom-menu, featured-images, post-formats, sticky-post, translation-ready
